--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,16 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.tataaignewsapp.HiltTestRunner"
         vectorDrawables {
             useSupportLibrary true
         }
+    }
+
+    testOptions {
+        // Used for Unit testing Android dependent elements in /test folder
+        unitTests.includeAndroidResources  = true
+        unitTests.returnDefaultValues = true
     }
 
     buildFeatures {
@@ -76,6 +82,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.browser:browser:1.7.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    implementation 'androidx.test:runner:1.5.2'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -90,6 +98,16 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    testImplementation 'androidx.test.ext:truth:1.5.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.5.0'
+
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.44")
+    // ...with Kotlin.
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.44")
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
 }
 
